# IAM

./: Dockerfile.dev  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: python-app.yml
app/: bootstrap.py  config.py  db.py
app/adapters/: eventstore.py  orm.py  repository.py
app/domain/: commands.py  enums.py  exceptions.py  iam.py  outbox.py
app/entrypoint/: main.py  middleware.py
app/service_layer/: exceptions.py  handlers.py  messagebus.py  unit_of_work.py
app/utils/: resolver.py
app/utils/events/: domain_event.py  mapper.py  meta.py  recorder.py
app/utils/models/: aggregate_root.py  eventstore.py
scripts/: checks.sh
tests/: conftest.py  fakes.py  test_test.py
tests/auth/: helpers.py
tests/auth/e2e/: test_service.py
tests/auth/integration/: test_bootstrapper.py  test_messagebus.py  test_persistence.py
tests/auth/unit/: test_model.py  test_service.py
